# ps-client

./: README.md  TODO.md  pyproject.toml
.github/workflows/: python-package.yml
src/ps_client/: __init__.py  client.py
tests/: client_test.py
